--- a/src/styles/components/SeatPicker/Seat.css
+++ b/src/styles/components/SeatPicker/Seat.css
@@ -1,5 +1,5 @@
 .Seat {
-  background-color: rgba(#4FC3F7, 0.75);
+  background-color: #4FC3F7;
   margin-right: 2px;
   height: 25px;
   width: 25px;
@@ -40,10 +40,10 @@
 
 .Seat--selected {
   cursor: pointer;
-  background-color: rgba(#4CAF50, 0.75);
+  background-color: #4CAF50;
 }
 
 .Seat--reserved {
   cursor: not-allowed;
-  background-color: rgba(#E0E0E0, 0.20);
+  background-color: #E0E0E0;
 }
