configuring example and styles

--- a/src/styles/components/SeatPicker/_Seat.scss
+++ b/src/styles/components/SeatPicker/_Seat.scss
@@ -1,8 +1,9 @@
 .Seat {
   background-color: #4FC3F7;
-  margin-right: 2px;
-  height: 25px;
-  width: 25px;
+  height: 28px;
+  width: 28px;
+  margin-right: 1px;
+  margin-left: 1px;
   color: white;
   display: flex;
   justify-content: center;
