--- a/example/src/index.css
+++ b/example/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background: red;
+  background: white;
 }
 
 .Seat--enabled:hover {
