--- a/src/styles/components/SeatPicker/_Blank.scss
+++ b/src/styles/components/SeatPicker/_Blank.scss
@@ -1,5 +1,6 @@
 .Blank {
-  height: 25px;
-  width: 25px;
-  margin-right: 2px;
+  height: 28px;
+  width: 28px;
+  margin-right: 1px;
+  margin-left: 1px;
 }
