--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @charset "UTF-8";
-@import "components/SeatPicker/Blank",
-"components/SeatPicker/Seat",
-"components/SeatPicker/Row",
-"components/SeatPicker/RowNumber",
-"components/SeatPicker/SeatPicker";
 
+@import "abstracts/variables";
+
+@import "components/blank";
+@import "components/seat";
+@import "components/seat-picker";
