adding loader and new function for accepting selections

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 $color-primary: #4FC3F7;
 $color-secondary: #03A9F4;
 $color-tertiary: #4CAF50;
+$color-loading:rgba(240,240,240,0.9);
 $color-seat-reserved: #E0E0E0;
 $color-seat-number: #fff;
 $color-row-number: #9E9E9E;
