--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,5 +3,7 @@
 @import "abstracts/variables";
 
 @import "components/blank";
+@import "components/loader";
 @import "components/seat";
+@import "components/seat-content";
 @import "components/seat-picker";
